src/Tests/Spectre.Console.Tests/Expectations/Cli/Arguments/ShortOptionMustOnlyBeOneCharacter.Output.verified.txt
Error: An error occured when parsing template.
       Short option names can not be longer than one character.

       --foo|-bar
              ^^^ Invalid option name